src/testData/analysis/methodName.cr
def <error descr="'..' is a pseudo-method and can't be redefined">..</error>
end

def <error descr="'...' is a pseudo-method and can't be redefined">...</error>
end

def <error descr="'&&' is a pseudo-method and can't be redefined">&&</error>
end

def &
end

def <error descr="'||' is a pseudo-method and can't be redefined">||</error>
end

def |
end

def <error descr="'!' is a pseudo-method and can't be redefined">!</error>
end

def +
end

def foo
end

def foo=
end